--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,6 +26,7 @@ a {
 }
 .layout {
   padding: 10px;
+  background-color: #262222;
 }
 
 .navbar-container {
@@ -139,7 +140,7 @@ span.text-red {
   height: 500px;
   line-height: 0.9;
   width: 100%;
-  z-index: -1;
+  z-index: 10;
 }
 .hero-banner-container .beats-solo {
   font-size: 20px;
